--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ filelock==3.16.1
 fonttools==4.55.2
 fsspec==2024.10.0
 idna==3.10
+intel-openmp==2021.4.0
 ipykernel==6.29.5
 ipython==8.30.0
 jedi==0.19.2
@@ -25,6 +26,8 @@ lxml==5.3.0
 MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
+missingno==0.5.2
+mkl==2021.4.0
 mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.4.2
@@ -54,8 +57,9 @@ soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
 sympy==1.13.3
+tbb==2021.13.1
 threadpoolctl==3.5.0
-torch==2.2.0+cpu
+torch==2.3.0+cpu
 torchbnn==1.2
 tornado==6.4.2
 traitlets==5.14.3
