--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asttokens==3.0.0
+attrs==24.2.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 colorama==0.4.6
 comm==0.2.2
@@ -9,29 +11,23 @@ cycler==0.12.1
 debugpy==1.8.9
 decorator==5.1.1
 executing==2.1.0
-filelock==3.16.1
 fonttools==4.55.2
-fsspec==2024.10.0
+h11==0.14.0
 idna==3.10
-intel-openmp==2021.4.0
 ipykernel==6.29.5
 ipython==8.30.0
 jedi==0.19.2
-Jinja2==3.1.4
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
 lxml==5.3.0
-MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
 missingno==0.5.2
-mkl==2021.4.0
-mpmath==1.3.0
 nest-asyncio==1.6.0
-networkx==3.4.2
-numpy==2.1.3
+numpy==1.26.4
+outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -41,9 +37,11 @@ platformdirs==4.3.6
 prompt_toolkit==3.0.48
 psutil==6.1.0
 pure_eval==0.2.3
+pycparser==2.22
 Pygments==2.18.0
 pyodbc==5.2.0
 pyparsing==3.2.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==308
@@ -52,19 +50,22 @@ requests==2.32.3
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+selenium==4.27.1
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
-sympy==1.13.3
-tbb==2021.13.1
 threadpoolctl==3.5.0
-torch==2.3.0+cpu
-torchbnn==1.2
 tornado==6.4.2
 traitlets==5.14.3
+trio==0.27.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uv==0.5.7
 wcwidth==0.2.13
+websocket-client==1.8.0
+wsproto==1.2.0
