--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,15 @@ cycler==0.12.1
 debugpy==1.8.9
 decorator==5.1.1
 executing==2.1.0
+filelock==3.13.1
 fonttools==4.55.2
+fsspec==2024.2.0
 h11==0.14.0
 idna==3.10
 ipykernel==6.29.5
 ipython==8.30.0
 jedi==0.19.2
+Jinja2==3.1.3
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
@@ -28,6 +31,7 @@ matplotlib-inline==0.1.7
 missingno==0.5.2
 mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.2.1
 numpy==1.26.4
 outcome==1.3.0.post0
 packaging==24.2
@@ -59,11 +63,15 @@ sortedcontainers==2.4.0
 soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
+sympy==1.13.1
 threadpoolctl==3.5.0
+torch==2.2.0+cpu
+torchbnn==1.2
 tornado==6.4.2
 traitlets==5.14.3
 trio==0.27.0
 trio-websocket==0.11.1
+typing_extensions==4.9.0
 tzdata==2024.2
 urllib3==2.2.3
 uv==0.5.7
